style & feat: added navigation bar and styled it

--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
 
     <!-- ,CSS -->
     <link rel="stylesheet" href="build/css/app.css" />
-    <title>My Porfolio- Stephanie Gonzalez</title>
+    <title>test- Stephanie Gonzalez</title>
   </head>
   <body>
     <header class="header" id="header">
