--- a/glowradiance.html
+++ b/glowradiance.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&family=Pacifico&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet" />
     <!-- ,REMIXICON -->
     <link
@@ -17,14 +17,15 @@
       crossorigin="" />
     <!-- ,BOOTSTRAP -->
     <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" /> -->
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous" /> -->
 
     <!-- ,CSS -->
     <link rel="stylesheet" href="build/css/app.css" />
-    <title>test- Stephanie Gonzalez</title>
+
+    <title>My Porfolio- Stephanie Gonzalez</title>
   </head>
   <body>
     <header class="header" id="header">
@@ -53,12 +54,12 @@
             <!-- ,NAVIGATION BAR -->
             <div class="menu__title">MENU</div>
             <div class="nav__menu">
-              <a href="#Home" class="nav__link">Home</a>
-              <a href="#About Me" class="nav__link">About Me</a>
-              <a href="#Career" class="nav__link">Career</a>
-              <a href="#Skills" class="nav__link">Skills</a>
-              <a href="#Projects" class="nav__link">Projects</a>
-              <a href="#Contact" class="nav__link contact">Contact Me</a>
+              <a href="/index.html" class="nav__link">Home</a>
+              <a href="/index.html#about" class="nav__link">About Me</a>
+              <a href="/index.html#career" class="nav__link">Career</a>
+              <a href="/index.html#skills" class="nav__link">Skills</a>
+              <a href="/index.html#projects" class="nav__link">Projects</a>
+              <a href="/index.html#contact" class="nav__link contact">Contact Me</a>
             </div>
             <div class="nav__close" id="nav-close">
               <i class="ri-close-circle-line"></i>
@@ -67,9 +68,19 @@
         </div>
       </div>
     </header>
+
+    <div class="main">
+      <section class="home section" id="home">
+        <div class="home__container container grid">
+          <h1 class="home__name">GLOW<span>RADIANCE</span></h1>
+        </div>
+      </section>
+    </div>
+
     <footer></footer>
   </body>
 
   <!-- ,MAIN JS -->
+  <script src="../build/js/mixitup.js"></script>
   <script src="../build/js/bundle.min.js"></script>
 </html>
