--- a/glowradiance.html
+++ b/glowradiance.html
@@ -15,12 +15,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
       crossorigin="" />
-    <!-- ,BOOTSTRAP -->
-    <!-- <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous" /> -->
+    <!-- ,Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous" />
 
     <!-- ,CSS -->
     <link rel="stylesheet" href="build/css/app.css" />
@@ -32,7 +33,7 @@
       <div class="nav__container">
         <div class="nav__bar">
           <!-- ,LOGO -->
-          <a href="#" class="nav__logo">
+          <a href="/index.html#" class="nav__logo">
             <span class="nav__logo-circle">
               <span class="s">S</span>
               <span class="g">G</span>
@@ -74,13 +75,76 @@
         <div class="home__container container grid">
           <h1 class="home__name">GLOW<span>RADIANCE</span></h1>
         </div>
+        <div class="gallery__projects-img">
+          <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="build/img/glowradiance-1.jpg" class="d-block w-100" alt="project image" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="build/img/glowradiance-2.jpg" class="d-block w-100" alt="project image" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-3.jpg" class="d-block w-100" alt="project image" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev">
+              <i class="ri-arrow-left-circle-fill"></i>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide="next">
+              <i class="ri-arrow-right-circle-fill"></i>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </section>
     </div>
 
     <footer></footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
   </body>
 
   <!-- ,MAIN JS -->
-  <script src="../build/js/mixitup.js"></script>
+
   <script src="../build/js/bundle.min.js"></script>
 </html>
