--- a/glowradiance.html
+++ b/glowradiance.html
@@ -95,24 +95,155 @@
                 data-bs-target="#carouselExampleDark"
                 data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="7"
+                aria-label="Slide 8"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="8"
+                aria-label="Slide 9"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="9"
+                aria-label="Slide 10"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="10"
+                aria-label="Slide 11"></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleDark"
+                data-bs-slide-to="11"
+                aria-label="Slide 12"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="build/img/glowradiance-1.jpg" class="d-block w-100" alt="project image" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="build/img/glowradiance-2.jpg" class="d-block w-100" alt="project image" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
+                  <h5>Login Screen</h5>
+                  <p>Users enter their email and password to log in.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-3.jpg" class="d-block w-100" alt="project image" />
+                <img src="build/img/glowradiance-2.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
+                  <h5>Login Validation</h5>
+                  <p>Ensures fields are not empty, displaying alerts if necessary.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-3.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Create Account</h5>
+                  <p>Displays required fields for account creation.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-4.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Password Recovery</h5>
+                  <p>
+                    Shows email field for password recovery, sends a token to the email, and
+                    confirms email sent.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-5.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Admin Dashboard: Daily Appointments</h5>
+                  <p>Displays appointments for the day, with options to search for other days.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-6.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Admin Dashboard: Update and Delete Services</h5>
+                  <p>Allows administrators to update and delete registered services.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-7.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Admin Dashboard: Add New Service</h5>
+                  <p>Enables administrators to add and register new services.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-8.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>User Dashboard: Service Selection</h5>
+                  <p>Shows available services for users to select for their appointments.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/glowradiance-9.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>User Dashboard: Choose Date and Time</h5>
+                  <p>Allows users to select the date and time for their appointment.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="build/img/glowradiance-10.jpg"
+                  alt="project image"
+                  class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>User Dashboard: Appointment Summary</h5>
+                  <p>
+                    Displays a summary of the scheduled appointment, including services, date, and
+                    time, with a confirmation button.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="build/img/glowradiance-11.jpg"
+                  alt="project image"
+                  class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>User Dashboard: Appointment Confirmation</h5>
+                  <p>
+                    After clicking confirm, an alert message shows whether the appointment was
+                    successfully scheduled.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="build/img/glowradiance-12.jpg"
+                  alt="project image"
+                  class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Login Password Validation</h5>
+                  <p>
+                    Verifies the entered password against the database to check if it's correct.
+                  </p>
                 </div>
               </div>
             </div>
@@ -132,6 +263,63 @@
               <i class="ri-arrow-right-circle-fill"></i>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+        </div>
+
+        <div class="project__description-info">
+          <div class="project__title-wrapper">
+            <div class="project__title-text">DESCRIPTION.</div>
+            <div class="project__title-shape"></div>
+          </div>
+          <a href="https://github.com/Stepha-gon/GlowRadiance-MVC" class="repository__link">
+            <button class="repository__button">
+              <svg
+                class="svgIcon"
+                viewBox="0 0 496 512"
+                height="1.4em"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
+              </svg>
+              <span class="text">See Repository</span>
+            </button>
+          </a>
+          <div class="project__description-content">
+            <div class="description__content">
+              <div class="project__overview-section">
+                <div class="project_section-title">PROJECT OVERVIEW.</div>
+                <p class="content-info-project">
+                  <span>Glowradiance</span> is a full-stack solution for beauty salons, employing a
+                  Model-View-Controller (MVC) architecture. It offers a seamless experience for
+                  clients and administrators, streamlining appointment scheduling and providing
+                  robust tools for service management and appointment tracking
+                </p>
+                <p class="content-info-project">
+                  Administrators can easily add or remove services, oversee appointments, and
+                  maintain a comprehensive catalog. Notably, Glowradiance prioritizes security with
+                  user authentication, password validation, and token-based authentication via
+                  email. Its intuitive interface and well-engineered architecture ensure scalability
+                  and ease of maintenance.
+                </p>
+                <p class="content-info-project">
+                  In essence, Glowradiance is a commitment to enhancing salon operations and
+                  customer experience with comprehensive features and elegant design.
+                </p>
+              </div>
+              <div class="project__tools-section">
+                <div class="project_section-title tools">TOOLS USED.</div>
+                <div class="description-skills">
+                  <div class="skills__used">
+                    <button class="skill__used">CSS</button>
+                    <button class="skill__used">HTML</button>
+                    <button class="skill__used">JavaScript</button>
+                    <button class="skill__used">Mysql</button>
+                    <button class="skill__used">SASS</button>
+                    <button class="skill__used">GIT</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
