Created homehunter project file and styled it

--- a/index.html
+++ b/index.html
@@ -453,27 +453,7 @@
                     </div></div
                 ></a>
               </div>
-              <div class="grid-items mix full__stack">
-                <a href="https://stepha-gon.github.io/Music-Festival/" class="card-link"
-                  ><div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front item-2"></div>
-                      <div class="flip-card-back">
-                        <p class="title">HOMEHUNTER</p>
-                        <p class="project-description">
-                          Harmony Fest is a vibrant and engaging website for a music festival,
-                          showcasing the performing artists, event dates, and image gallery. It
-                          provides detailed descriptions and ticket prices.
-                        </p>
-                        <a
-                          href="https://stepha-gon.github.io/Music-Festival/"
-                          class="link-project-logo">
-                          <i class="ri-links-line"></i
-                        ></a>
-                      </div>
-                    </div></div
-                ></a>
-              </div>
+
               <div class="grid-items mix full__stack">
                 <a href="/glowradiance.html" class="card-link"
                   ><div class="flip-card">
@@ -488,6 +468,28 @@
                           scalability.
                         </p>
                         <a href="/glowradiance.html" class="link-project-logo">
+                          <i class="ri-links-line"></i
+                        ></a>
+                      </div>
+                    </div></div
+                ></a>
+              </div>
+              <div class="grid-items mix full__stack">
+                <a href="/homehunter.html" class="card-link"
+                  ><div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front item-2"></div>
+                      <div class="flip-card-back">
+                        <p class="title">HOMEHUNTER</p>
+                        <p class="project-description">
+                          Web app for buying and selling luxury homes. It features user security,
+                          competitive pricing, and efficient service. Users can browse listings,
+                          read blog posts, and contact admins. Admins manage listings via a secure
+                          CRUD panel.
+                        </p>
+                        <a
+                          href="https://stepha-gon.github.io/Music-Festival/"
+                          class="link-project-logo">
                           <i class="ri-links-line"></i
                         ></a>
                       </div>
