--- a/homehunter.html
+++ b/homehunter.html
@@ -26,7 +26,7 @@
     <!-- ,CSS -->
     <link rel="stylesheet" href="build/css/app.css" />
 
-    <title>GlowRadiance- Stephanie Gonzalez</title>
+    <title>HomeHunter- Stephanie Gonzalez</title>
   </head>
   <body>
     <header class="header" id="header">
@@ -73,7 +73,7 @@
     <div class="main">
       <section class="home section" id="home">
         <div class="home__container container grid">
-          <h1 class="home__name">GLOW<span>RADIANCE</span></h1>
+          <h1 class="home__name">HOME<span>HUNTER</span></h1>
         </div>
         <div class="gallery__projects-img">
           <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -125,123 +125,69 @@
                 data-bs-target="#carouselExampleDark"
                 data-bs-slide-to="8"
                 aria-label="Slide 9"></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleDark"
-                data-bs-slide-to="9"
-                aria-label="Slide 10"></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleDark"
-                data-bs-slide-to="10"
-                aria-label="Slide 11"></button>
-              <button
-                type="button"
-                data-bs-target="#carouselExampleDark"
-                data-bs-slide-to="11"
-                aria-label="Slide 12"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="build/img/glowradiance-1.jpg" class="d-block w-100" alt="project image" />
+                <img src="build/img/homehunter-1.jpg" class="d-block w-100" alt="project image" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Screen</h5>
-                  <p>Users enter their email and password to log in</p>
+                  <h5>Exploring the Homepage</h5>
+                  <p>Navigation, Services, and Header</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-2.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-2.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Validation</h5>
-                  <p>Ensures fields are not empty, displaying alerts if necessary</p>
+                  <h5>Engage with Us</h5>
+                  <p>Contact Section, Blog Entries, and Testimonials</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-3.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-3.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Create Account</h5>
-                  <p>Displays required fields for account creation</p>
+                  <h5>Meet the Team</h5>
+                  <p>About Us Page Highlighting Company Experience</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-4.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-4.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Password Recovery</h5>
-                  <p>
-                    Shows email field for password recovery, sends a token to the email, and
-                    confirms email sent
-                  </p>
+                  <h5>Property Listings</h5>
+                  <p>Browse Announcements with Descriptions and Prices</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-5.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-5.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Daily Appointments</h5>
-                  <p>Displays appointments for the day, with options to search for other days</p>
+                  <h5>Dive into Insights</h5>
+                  <p>Explore All Blog Entries</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-6.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-6.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Update and Delete Services</h5>
-                  <p>Allows administrators to update and delete registered services</p>
+                  <h5>Reach Out</h5>
+                  <p>Contact Us Form Page</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-7.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-7.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Add New Service</h5>
-                  <p>Enables administrators to add and register new services</p>
+                  <h5>Contact Us Form in Detail</h5>
+                  <p>Complete Form View</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-8.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-8.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Service Selection</h5>
-                  <p>Shows available services for users to select for their appointments</p>
+                  <h5>Behind the Scenes</h5>
+                  <p>Admin Panel for CRUD Operations</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-9.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/homehunter-9.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Choose Date and Time</h5>
-                  <p>Allows users to select the date and time for their appointment</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-10.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Appointment Summary</h5>
-                  <p>
-                    Displays a summary of the scheduled appointment, including services, date, and
-                    time, with a confirmation button
-                  </p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-11.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Appointment Confirmation</h5>
-                  <p>
-                    After clicking confirm, an alert message shows whether the appointment was
-                    successfully scheduled
-                  </p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-12.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Password Validation</h5>
-                  <p>Verifies the entered password against the database to check if it's correct</p>
+                  <h5>Access Control</h5>
+                  <p>Login Tab Verifying Passwords with Database</p>
                 </div>
               </div>
             </div>
@@ -269,7 +215,7 @@
             <div class="project__title-text">DESCRIPTION.</div>
             <div class="project__title-shape"></div>
           </div>
-          <a href="https://github.com/Stepha-gon/GlowRadiance-MVC" class="repository__link">
+          <a href="https://github.com/Stepha-gon/HomeHunter" class="repository__link">
             <button class="repository__button">
               <svg
                 class="svgIcon"
@@ -287,21 +233,30 @@
               <div class="project__overview-section">
                 <div class="project_section-title">PROJECT OVERVIEW.</div>
                 <p class="content-info-project">
-                  <span>Glowradiance</span> is a full-stack solution for beauty salons, employing a
-                  Model-View-Controller (MVC) architecture. It offers a seamless experience for
-                  clients and administrators, streamlining appointment scheduling and providing
-                  robust tools for service management and appointment tracking
+                  <span>HomeHunter</span> is a luxurious real estate web platform for buying and
+                  selling houses and apartments. This project prioritizes user security, competitive
+                  market pricing, and swift service execution. The website features an "About Us"
+                  page detailing the company's background and a comprehensive listings page
+                  showcasing properties for sale, each with detailed information about the number of
+                  bathrooms, parking spaces, bedrooms, and the price.
                 </p>
                 <p class="content-info-project">
-                  Administrators can easily add or remove services, oversee appointments, and
-                  maintain a comprehensive catalog. Notably, Glowradiance prioritizes security with
-                  user authentication, password validation, and token-based authentication via
-                  email. Its intuitive interface and well-engineered architecture ensure scalability
-                  and ease of maintenance.
+                  All property listings are stored in a secure database, accessible only via an
+                  admin login panel. This admin panel is exclusively available to the administrator
+                  through a private URL, ensuring that regular users cannot access or view it. Once
+                  authenticated, the administrator has access to a CRUD (Create, Read, Update,
+                  Delete) panel where they can manage all properties and sellers listed in the
+                  database.
                 </p>
                 <p class="content-info-project">
-                  In essence, Glowradiance is a commitment to enhancing salon operations and
-                  customer experience with comprehensive features and elegant design.
+                  Additionally, the website includes a blog section connected to the database,
+                  allowing the administrator to manage blog posts through the admin panel. Clicking
+                  on a blog entry directs users to the full blog post. The contact page enables
+                  users to reach out to the administrator via a form, specifying whether they wish
+                  to buy or sell, and providing their contact information. This form automatically
+                  sends an email to the administrator upon submission. The entire project is built
+                  using the Model View Controller (MVC) architecture, ensuring a modular and
+                  scalable codebase.
                 </p>
               </div>
               <div class="project__tools-section">
