added harmony fest project and styled it

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 
             <div class="projects__grid">
               <div class="grid-items mix front__end">
-                <a href="https://stepha-gon.github.io/Music-Festival/" class="card-link"
+                <a href="/harmonyfest.html" class="card-link"
                   ><div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front item-1"></div>
@@ -440,13 +440,10 @@
                       <div class="flip-card-back">
                         <p class="title">HARMONY FEST</p>
                         <p class="project-description">
-                          Harmony Fest is a vibrant and engaging website for a music festival,
-                          showcasing the performing artists, event dates, and image gallery. It
-                          provides detailed descriptions and ticket prices.
+                          A vibrant front-end website showcasing Colombia's music festival,
+                          celebrating diverse genres and renowned artists like Karol G and Feid.
                         </p>
-                        <a
-                          href="https://stepha-gon.github.io/Music-Festival/"
-                          class="link-project-logo">
+                        <a href="/harmonyfest.html" class="link-project-logo">
                           <i class="ri-links-line"></i
                         ></a>
                       </div>
@@ -487,9 +484,7 @@
                           read blog posts, and contact admins. Admins manage listings via a secure
                           CRUD panel.
                         </p>
-                        <a
-                          href="https://stepha-gon.github.io/Music-Festival/"
-                          class="link-project-logo">
+                        <a href="/homehunter.html" class="link-project-logo">
                           <i class="ri-links-line"></i
                         ></a>
                       </div>
