--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </p>
           </div>
           <div class="contact__email">
-            <form class="form">
+            <form class="form" id="contact-form">
               <p class="title">Send Me a Message</p>
               <p class="message">
                 Please make sure to fill in all the fields so I can assist you promptly!
@@ -522,8 +522,8 @@
                   <input
                     class="input"
                     type="text"
-                    name="name"
-                    id="name"
+                    name="user_name"
+                    id="user_name"
                     placeholder=""
                     required="" />
                   <span>Firstname</span>
@@ -532,8 +532,8 @@
                   <input
                     class="input"
                     type="email"
-                    name="email"
-                    id="email"
+                    name="user_email"
+                    id="user_email"
                     placeholder=""
                     required="" />
                   <span>Email</span>
@@ -543,8 +543,8 @@
                 <input
                   class="input"
                   type="text"
-                  name="subject"
-                  id="subject"
+                  name="user_subject"
+                  id="user_subject"
                   placeholder=""
                   required="" />
                 <span>Subject</span>
@@ -552,15 +552,17 @@
               <label>
                 <textarea
                   class="input"
-                  type="password"
-                  name="message"
-                  id="message"
+                  type="text"
+                  name="user_message"
+                  id="user_message"
                   placeholder=""
                   required=""></textarea>
                 <span>Message</span>
               </label>
 
-              <button class="submit"><i class="ri-mail-send-line"></i> Send Message</button>
+              <button type="submit" class="submit">
+                <i class="ri-mail-send-line"></i> Send Message
+              </button>
             </form>
           </div>
           <div class="contact__social">
@@ -603,6 +605,10 @@
   </body>
 
   <!-- ,MAIN JS -->
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
