added footer section, cv download & modified social links styles

--- a/harmonyfest.html
+++ b/harmonyfest.html
@@ -202,7 +202,7 @@
             <div class="project__title-shape"></div>
           </div>
           <div class="link__buttons">
-            <a href="https://github.com/Stepha-gon/Music-Festival" class="repository__link">
+            <a href="https://github.com/Stepha-Gonz/Music-Festival" class="repository__link">
             <button class="repository__button">
               <svg
                 class="svgIcon"
@@ -217,7 +217,7 @@
             
           </a>
 
-          <a href="https://stepha-gon.github.io/Music-Festival/" class="repository__link">
+          <a href="https://stepha-gonz.github.io/Music-Festival/" class="repository__link">
             <button class="repository__button">
               <img
                 class="svgIcon" src="build/img/go.svg"></img>
