cleaned code and styled darkmode

--- a/harmonyfest.html
+++ b/harmonyfest.html
@@ -72,7 +72,7 @@
 
     <div class="main">
       <section class="home section" id="home">
-        <div class="home__container container grid">
+        <div class="home__container-project container grid">
           <h1 class="home__name">HARMONY <span>FEST</span></h1>
         </div>
         <div class="gallery__projects-img">
@@ -197,9 +197,9 @@
         </div>
 
         <div class="project__description-info">
-          <div class="project__title-wrapper">
-            <div class="project__title-text">DESCRIPTION.</div>
-            <div class="project__title-shape"></div>
+          <div class="title-wrapper ">
+            <div class="title-text">DESCRIPTION.</div>
+            <div class="title-shape red project-title"></div>
           </div>
           <div class="link__buttons">
             <a href="https://github.com/Stepha-Gonz/Music-Festival" class="repository__link">
@@ -295,7 +295,26 @@
       </section>
     </div>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__container container">
+        <ul class="footer__links">
+          <li>
+            <a href="index.html#home" class="footer__link">Home</a>
+          </li>
+          <li>
+            <a href="index.html#about" class="footer__link">About</a>
+          </li>
+          <li>
+            <a href="index.html#career" class="footer__link">Career</a>
+          </li>
+          <li>
+            <a href="index.html#projects" class="footer__link">Projects</a>
+          </li>
+        </ul>
+
+        <span class="footer__copy"> &#169; All Rights Reserved By <span>Stepha-Gonz</span> </span>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
