--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="main">
       <section class="home section" id="home">
         <div class="home__container container grid">
-          <h1 class="home__name">Hi, I'm <span>Stephanie</span></h1>
-          <div class="home__perfil">
+          <h1 class="home__name slide-right">Hi, I'm <span>Stephanie</span></h1>
+          <div class="home__perfil slide-left">
             <div class="home__image">
               <img src="build/img/home-img.jpg" alt="home image" class="home__img" />
               <div class="home__shadow">
@@ -93,7 +93,7 @@
                     </svg>
                   </li>
                 </a>
-                <a href="https://github.com/Stepha-gon" class="links__home">
+                <a href="https://github.com/Stepha-Gonz" class="links__home">
                   <li class="icon github">
                     <span class="tooltip">GitHub</span>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="home__info">
+          <div class="home__info slide-right">
             <h3 class="ima">I'm a</h3>
             <h3 class="home-animation"><span></span></h3>
             <p class="home__description">
@@ -147,9 +147,9 @@
       </section>
       <section class="about section" id="about">
         <div class="about__container container grid">
-          <div class="about__title-wrapper">
-            <span class="about__title-text">ABOUT ME.</span>
-            <div class="about__title-shape"></div>
+          <div class="title-wrapper">
+            <span class="title-text">ABOUT ME.</span>
+            <div class="title-shape orange about-title"></div>
           </div>
 
           <div class="about__perfil-img">
@@ -196,9 +196,9 @@
 
       <section class="career section" id="career">
         <div class="career__container container grid">
-          <div class="career__title-wrapper">
-            <span class="career__title-text">CAREER.</span>
-            <div class="career__title-shape"></div>
+          <div class="title-wrapper">
+            <span class="title-text">CAREER.</span>
+            <div class="title-shape blue career-title"></div>
           </div>
 
           <h2 class="title-career">EDUCATION</h2>
@@ -388,9 +388,9 @@
         <div class="skills__container container grid">
           <div class="title__box">
             <span class="skills-subtitle">Technical and Professional</span>
-            <div class="skills__title-wrapper">
-              <span class="skills-title">MY SKILLS.</span>
-              <div class="skills__title-shape"></div>
+            <div class="title-wrapper">
+              <span class="title-text">MY SKILLS.</span>
+              <div class="title-shape yellow skills-title"></div>
             </div>
           </div>
           <div class="skills-grid">
@@ -453,9 +453,9 @@
       </section>
       <section class="projects section" id="projects">
         <div class="projects__container container">
-          <div class="projects__title-wrapper">
-            <div class="projects__title">PROJECTS.</div>
-            <div class="projects__title-shape"></div>
+          <div class="title-wrapper">
+            <div class="title-text">PROJECTS.</div>
+            <div class="title-shape green projects-title"></div>
           </div>
 
           <div class="container">
@@ -533,9 +533,9 @@
       <section class="contact section" id="contact">
         <div class="contact__container">
           <div class="contact__data">
-            <div class="contact__title-wrapper">
-              <div class="contact__title">CONTACT ME.</div>
-              <div class="contact__title-shape"></div>
+            <div class="title-wrapper contact-t">
+              <div class="title-text">CONTACT ME.</div>
+              <div class="title-shape orange contact-title"></div>
             </div>
             <p class="contact__description-1">
               If you would like more information, please don't hesitate to send me a message. I will
@@ -620,7 +620,7 @@
                     </svg>
                   </li>
                 </a>
-                <a href="https://github.com/Stepha-gon" class="links">
+                <a href="https://github.com/Stepha-Gonz" class="links">
                   <li class="icon github">
                     <span class="tooltip">GitHub</span>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
@@ -653,7 +653,7 @@
           </li>
         </ul>
 
-        <span class="footer__copy"> &#169; All Rights Reserved By <span>Stepha-gon</span> </span>
+        <span class="footer__copy"> &#169; All Rights Reserved By <span>Stepha-Gonz</span> </span>
       </div>
     </footer>
   </body>
