changing link button style for projects

--- a/index.html
+++ b/index.html
@@ -467,64 +467,76 @@
 
             <div class="projects__grid">
               <div class="grid-items mix front__end">
-                <a href="/harmonyfest.html" class="card-link"
-                  ><div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front item-1"></div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front item-1"></div>
 
-                      <div class="flip-card-back">
-                        <p class="title">HARMONY FEST</p>
-                        <p class="project-description">
-                          A vibrant front-end website showcasing Colombia's music festival,
-                          celebrating diverse genres and renowned artists like Karol G and Feid.
-                        </p>
-                        <a href="/harmonyfest.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
-                        ></a>
-                      </div>
-                    </div></div
-                ></a>
+                    <div class="flip-card-back">
+                      <p class="title">HARMONY FEST</p>
+                      <p class="project-description">
+                        A vibrant front-end website showcasing Colombia's music festival,
+                        celebrating diverse genres and renowned artists like Karol G and Feid.
+                      </p>
+                      <a href="/harmonyfest.html" class="link-project-logo">
+                        <button class="cta">
+                          <span>See Project</span>
+                          <svg width="15px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                          </svg></button
+                      ></a>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="grid-items mix full__stack">
-                <a href="/glowradiance.html" class="card-link"
-                  ><div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front item-3"></div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front item-3"></div>
 
-                      <div class="flip-card-back">
-                        <p class="title">GLOWRADIANCE</p>
-                        <p class="project-description">
-                          Revolutionize beauty salon management. Schedule appointments seamlessly,
-                          manage services effortlessly. Robust security. MVC architecture for
-                          scalability.
-                        </p>
-                        <a href="/glowradiance.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
-                        ></a>
-                      </div>
-                    </div></div
-                ></a>
+                    <div class="flip-card-back">
+                      <p class="title">GLOWRADIANCE</p>
+                      <p class="project-description">
+                        Revolutionize beauty salon management. Schedule appointments seamlessly,
+                        manage services effortlessly. Robust security. MVC architecture for
+                        scalability.
+                      </p>
+                      <a href="/glowradiance.html" class="link-project-logo">
+                        <button class="cta">
+                          <span>See Project</span>
+                          <svg width="15px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                          </svg></button
+                      ></a>
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="grid-items mix full__stack">
-                <a href="/homehunter.html" class="card-link"
-                  ><div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front item-2"></div>
-                      <div class="flip-card-back">
-                        <p class="title">HOMEHUNTER</p>
-                        <p class="project-description">
-                          Web app for buying and selling luxury homes. It features user security,
-                          competitive pricing, and efficient service. Users can browse listings,
-                          read blog posts, and contact admins. Admins manage listings via a secure
-                          CRUD panel.
-                        </p>
-                        <a href="/homehunter.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
-                        ></a>
-                      </div>
-                    </div></div
-                ></a>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front item-2"></div>
+                    <div class="flip-card-back">
+                      <p class="title">HOMEHUNTER</p>
+                      <p class="project-description">
+                        Web app for buying and selling luxury homes. It features user security,
+                        competitive pricing, and efficient service. Users can browse listings, read
+                        blog posts, and contact admins. Admins manage listings via a secure CRUD
+                        panel.
+                      </p>
+                      <a href="/homehunter.html" class="link-project-logo">
+                        <button class="cta">
+                          <span>See Project</span>
+                          <svg width="15px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                          </svg></button
+                      ></a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
