changing link button style for projects

--- a/index.html
+++ b/index.html
@@ -467,23 +467,27 @@
 
             <div class="projects__grid">
               <div class="grid-items mix front__end">
-                <a href="/harmonyfest.html" class="card-link"
-                  ><div class="flip-card">
-                    <div class="flip-card-inner">
-                      <div class="flip-card-front item-1"></div>
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front item-1"></div>
 
-                      <div class="flip-card-back">
-                        <p class="title">HARMONY FEST</p>
-                        <p class="project-description">
-                          A vibrant front-end website showcasing Colombia's music festival,
-                          celebrating diverse genres and renowned artists like Karol G and Feid.
-                        </p>
-                        <a href="/harmonyfest.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
-                        ></a>
-                      </div>
-                    </div></div
-                ></a>
+                    <div class="flip-card-back">
+                      <p class="title">HARMONY FEST</p>
+                      <p class="project-description">
+                        A vibrant front-end website showcasing Colombia's music festival,
+                        celebrating diverse genres and renowned artists like Karol G and Feid.
+                      </p>
+                      <a href="/harmonyfest.html" class="link-project-logo">
+                        <button class="cta">
+                          <span>See Project</span>
+                          <svg width="15px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                          </svg></button
+                      ></a>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <div class="grid-items mix full__stack">
@@ -500,7 +504,12 @@
                           scalability.
                         </p>
                         <a href="/glowradiance.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
+                          <button class="cta">
+                            <span>See Project</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                              <path d="M1,5 L11,5"></path>
+                              <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg></button
                         ></a>
                       </div>
                     </div></div
@@ -520,7 +529,12 @@
                           CRUD panel.
                         </p>
                         <a href="/homehunter.html" class="link-project-logo">
-                          <i class="ri-links-line"></i
+                          <button class="cta">
+                            <span>See Project</span>
+                            <svg width="15px" height="10px" viewBox="0 0 13 10">
+                              <path d="M1,5 L11,5"></path>
+                              <polyline points="8 1 12 5 8 9"></polyline>
+                            </svg></button
                         ></a>
                       </div>
                     </div></div
