configured projects technologies

--- a/index.html
+++ b/index.html
@@ -466,18 +466,18 @@
             </div>
 
             <div class="projects__grid">
-              <div class="grid-items mix front__end">
+              <div class="grid-items mix full__stack">
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front item-1"></div>
-
                     <div class="flip-card-back">
-                      <p class="title">HARMONY FEST</p>
+                      <p class="title">TASKNEXUS</p>
                       <p class="project-description">
-                        A vibrant front-end website showcasing Colombia's music festival,
-                        celebrating diverse genres and renowned artists like Karol G and Feid.
+                        A full-stack app for managing projects and tasks. Users can create accounts,
+                        track tasks, and customize profiles. Features CRUD operations, email
+                        validation, and secure password management.
                       </p>
-                      <a href="/harmonyfest.html" class="link-project-logo">
+                      <a href="/tasknexus.html" class="link-project-logo">
                         <button class="cta">
                           <span>See Project</span>
                           <svg width="15px" height="10px" viewBox="0 0 13 10">
@@ -489,7 +489,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="grid-items mix full__stack">
                 <div class="flip-card">
                   <div class="flip-card-inner">
@@ -514,6 +513,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="grid-items mix full__stack">
                 <div class="flip-card">
                   <div class="flip-card-inner">
@@ -527,6 +527,30 @@
                         panel.
                       </p>
                       <a href="/homehunter.html" class="link-project-logo">
+                        <button class="cta">
+                          <span>See Project</span>
+                          <svg width="15px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                          </svg></button
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid-items mix front__end">
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front item-4"></div>
+
+                    <div class="flip-card-back">
+                      <p class="title">HARMONY FEST</p>
+                      <p class="project-description">
+                        A vibrant front-end website showcasing Colombia's music festival,
+                        celebrating diverse genres and renowned artists like Karol G and Feid.
+                      </p>
+                      <a href="/harmonyfest.html" class="link-project-logo">
                         <button class="cta">
                           <span>See Project</span>
                           <svg width="15px" height="10px" viewBox="0 0 13 10">
