--- a/tasknexus.html
+++ b/tasknexus.html
@@ -26,7 +26,7 @@
     <!-- ,CSS -->
     <link rel="stylesheet" href="build/css/app.css" />
 
-    <title>GlowRadiance- Stephanie Gonzalez</title>
+    <title>TaskNexus- Stephanie Gonzalez</title>
   </head>
   <body>
     <header class="header" id="header">
@@ -73,7 +73,7 @@
     <div class="main">
       <section class="home section" id="home">
         <div class="home__container-project container grid">
-          <h1 class="home__name">GLOW<span>RADIANCE</span></h1>
+          <h1 class="home__name">Task<span>Nexus</span></h1>
         </div>
         <div class="gallery__projects-img">
           <div id="carouselExampleDark" class="carousel carousel-dark slide">
@@ -143,105 +143,87 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="build/img/glowradiance-1.jpg" class="d-block w-100" alt="project image" />
+                <img src="build/img/tasknexus-1.jpg" class="d-block w-100" alt="project image" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Screen</h5>
-                  <p>Users enter their email and password to log in</p>
+                  <h5>Welcome to TaskNexus</h5>
+                  <p>Main Login Page with Email and Password</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-2.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-2.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Validation</h5>
-                  <p>Ensures fields are not empty, displaying alerts if necessary</p>
+                  <h5>Join TaskNexus</h5>
+                  <p>Create an Account with Required Information</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-3.jpg" alt="project image" class="d-block w-100" />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Create Account</h5>
-                  <p>Displays required fields for account creation</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="build/img/glowradiance-4.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-3.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Password Recovery</h5>
-                  <p>
-                    Shows email field for password recovery, sends a token to the email, and
-                    confirms email sent
-                  </p>
+                  <p>Confirm Your Identity via Email Verification</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-5.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-4.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Daily Appointments</h5>
-                  <p>Displays appointments for the day, with options to search for other days</p>
+                  <h5>Project Dashboard</h5>
+                  <p>Overview of All Projects and Navigation Sidebar</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-6.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-5.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Update and Delete Services</h5>
-                  <p>Allows administrators to update and delete registered services</p>
+                  <h5>Project Details</h5>
+                  <p>View All Tasks within a Specific Project</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-7.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-6.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Admin Dashboard: Add New Service</h5>
-                  <p>Enables administrators to add and register new services</p>
+                  <h5>Pending Tasks Filter</h5>
+                  <p>Display Only Pending Tasks</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-8.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-7.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Service Selection</h5>
-                  <p>Shows available services for users to select for their appointments</p>
+                  <h5>Completed Tasks Filter</h5>
+                  <p>Display Only Completed Tasks</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="build/img/glowradiance-9.jpg" alt="project image" class="d-block w-100" />
+                <img src="build/img/tasknexus-8.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Choose Date and Time</h5>
-                  <p>Allows users to select the date and time for their appointment</p>
+                  <h5>Create a New Task</h5>
+                  <p>Modal for Task Name Entry</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-10.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
+                <img src="build/img/tasknexus-9.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Appointment Summary</h5>
-                  <p>
-                    Displays a summary of the scheduled appointment, including services, date, and
-                    time, with a confirmation button
-                  </p>
+                  <h5>Task Created</h5>
+                  <p>Confirmation Alert</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-11.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
+                <img src="build/img/tasknexus-10.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>User Dashboard: Appointment Confirmation</h5>
-                  <p>
-                    After clicking confirm, an alert message shows whether the appointment was
-                    successfully scheduled
-                  </p>
+                  <h5>Delete Task Warning</h5>
+                  <p>Confirmation Prompt Before Deletion</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="build/img/glowradiance-12.jpg"
-                  alt="project image"
-                  class="d-block w-100" />
+                <img src="build/img/tasknexus-11.jpg" alt="project image" class="d-block w-100" />
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Login Password Validation</h5>
-                  <p>Verifies the entered password against the database to check if it's correct</p>
+                  <h5>New Project Creation</h5>
+                  <p>Enter Project Name</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="build/img/tasknexus-12.jpg" alt="project image" class="d-block w-100" />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Profile Settings</h5>
+                  <p>Configure User Name and Email</p>
                 </div>
               </div>
             </div>
@@ -269,7 +251,7 @@
             <div class="title-text">DESCRIPTION.</div>
             <div class="title-shape red project-title"></div>
           </div>
-          <a href="https://github.com/Stepha-Gonz/GlowRadiance-MVC" class="repository__link">
+          <a href="https://github.com/Stepha-Gonz/TaskNexus" class="repository__link">
             <button class="repository__button">
               <svg
                 class="svgIcon"
@@ -287,21 +269,23 @@
               <div class="project__overview-section">
                 <div class="project_section-title">PROJECT OVERVIEW.</div>
                 <p class="content-info-project">
-                  <span>Glowradiance</span> is a full-stack solution for beauty salons, employing a
-                  Model-View-Controller (MVC) architecture. It offers a seamless experience for
-                  clients and administrators, streamlining appointment scheduling and providing
-                  robust tools for service management and appointment tracking
+                  <span>TaskNexus</span> is a full-stack web application designed to streamline
+                  project and task management. Each user can create an account to manage their
+                  projects and specific tasks, offering a seamless experience for keeping track of
+                  completed and pending tasks. Users can filter tasks based on their status, rename
+                  them, delete them, and update them using a robust CRUD system.
                 </p>
                 <p class="content-info-project">
-                  Administrators can easily add or remove services, oversee appointments, and
-                  maintain a comprehensive catalog. Notably, Glowradiance prioritizes security with
-                  user authentication, password validation, and token-based authentication via
-                  email. Its intuitive interface and well-engineered architecture ensure scalability
-                  and ease of maintenance.
+                  The application prioritizes security, featuring account creation, password
+                  changes, and other functionalities safeguarded by validation processes.
+                  Email-based token validation is implemented for account confirmation and password
+                  resets, ensuring secure user interactions. Additionally, users can personalize
+                  their profiles by changing their names, emails, and passwords in the customization
+                  panel.
                 </p>
                 <p class="content-info-project">
-                  In essence, Glowradiance is a commitment to enhancing salon operations and
-                  customer experience with comprehensive features and elegant design.
+                  In essence, TaskNexus is engineered to provide a user-friendly and secure
+                  environment for efficient project and task management.
                 </p>
               </div>
               <div class="project__tools-section">
