about section paragraph improved

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
             <div class="about__title">
               <h1 class="about__title--main">ABOUT ME</h1>
               <p class="about__title--text">
-                I´m an engineer with a blend of skills in Project management, Quality Control,
-                Programming, and Data analysis.
+                Engineer with skills in project management, programming, and data analysis.
               </p>
             </div>
             <p class="about__description--text">
-              <span>My superpower?</span> Driving continuous improvement projects with an innovative
-              twist, always looking for new ways to optimize and automate tasks to save time and
-              increase efficiency. Right now, I'm immersed in Full-Stack web development and data
-              analysis, with the goal of creating digital efficient products. Let's make digital
-              magic together!
+              <span>My strength? </span> Driving continuous improvement projects with an innovative
+              approach, constantly seeking new ways to optimize and automate processes to maximize
+              efficiency and productivity. Currently, I'm immersing myself in Full-Stack web
+              development and advanced data analysis, aiming to create effective, user-friendly
+              digital products. My vision is to merge engineering with digital innovation,
+              transforming ideas into practical, valuable solutions!
             </p>
             <a
               href="CV-Stephanie_Gonzalez.pdf"
@@ -329,7 +329,19 @@
                   </p>
                 </div>
               </div>
-
+              <div class="skills-services__card swiper-slide">
+                <div class="skills-services__card--container">
+                  <img
+                    src="public/build/img/bars.svg"
+                    alt="icon-service"
+                    class="skills-services__card--img" />
+                  <h3 class="skills-services__card--title">Data Analysis</h3>
+                  <p class="skills-services__card--text">
+                    Analyzing data to gain useful insights through website dashboards for better
+                    understanding of the data
+                  </p>
+                </div>
+              </div>
               <div class="skills-services__card swiper-slide">
                 <div class="skills-services__card--container">
                   <img
@@ -352,20 +364,6 @@
                   <h3 class="skills-services__card--title">WPO</h3>
                   <p class="skills-services__card--text">
                     Web Performance Optimization: Improving your website's speed and performance
-                  </p>
-                </div>
-              </div>
-
-              <div class="skills-services__card swiper-slide">
-                <div class="skills-services__card--container">
-                  <img
-                    src="public/build/img/bars.svg"
-                    alt="icon-service"
-                    class="skills-services__card--img" />
-                  <h3 class="skills-services__card--title">Data Analysis</h3>
-                  <p class="skills-services__card--text">
-                    Analyzing data to gain useful insights through website dashboards for better
-                    understanding of the data
                   </p>
                 </div>
               </div>
